--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "game",
+  "name": "plugins_platform",
   "version": "1.0.0",
-  "description": "game website",
+  "description": "plugins_platform",
   "main": "index.js",
   "scripts": {
-    "start": "node server.js",
-    "develop": "webpack-dev-server --config webpack.config.js --devtool eval --progress --colors --hot --content-base src"
+    "start": "webpack-dev-server --config webpack.config.js",
+    "build": "rimraf ./dist && webpack --config webpack.config.production.js",
+    "mock": "node_modules/.bin/json-server --watch src/mock/db.js --port 9090"
   },
   "repository": {
     "type": "git",
@@ -23,22 +24,34 @@
   "devDependencies": {
     "babel-core": "^6.25.0",
     "babel-loader": "^7.0.0",
+    "babel-plugin-transform-async-to-generator": "^6.24.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-object-assign": "^6.22.0",
+    "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "css-loader": "^0.28.4",
+    "extract-text-webpack-plugin": "^2.1.2",
+    "html-webpack-plugin": "^2.28.0",
+    "http-proxy-middleware": "^0.17.4",
+    "json-server": "^0.10.1",
     "less-loader": "^4.0.4",
     "open-browser-webpack-plugin": "0.0.5",
+    "react-hot-loader": "^1.3.1",
+    "rimraf": "^2.6.1",
     "style-loader": "^0.18.2",
     "webpack": "^2.6.1",
     "webpack-dev-middleware": "^1.10.2",
     "webpack-dev-server": "^2.4.5",
-    "webpack-hot-middleware": "^2.18.0"
+    "webpack-hot-middleware": "^2.18.0",
+    "whatwg-fetch": "^2.0.3"
   },
   "dependencies": {
     "file-loader": "^0.11.2",
     "less": "^2.7.2",
+    "mobx": "^3.1.16",
+    "mobx-react": "^4.2.1",
     "react": "^15.6.0",
     "react-dom": "^15.6.0",
     "react-router": "^3.0.5",
